tests/cases/fail/class_field_assign_annotation.p4
class Point:
    x: int
    y: int

def main() -> None:
    p: Point = Point(1, 2)
    p.x: int = 3
